--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <p>Created cover and interiors for a 380-page book, featuring chapter breaks and footnotes.</p>
     </div>
     <div class="project">
-  <img src="https://www.dropbox.com/scl/fi/ov0l5uwzy130xtm6yux4t/video_preview.mp4?rlkey=3nrj8kzdje0ta20supxdmid1q&st=mqe140v8&dl=0" alt="Social Media Videos: GlobaLee Magazine" />
+  <img src="https://pub-65ba328524bc4fc1a1ff402dd2e64d63.r2.dev/video_preview.mp4" alt="Social Media Videos: GlobaLee Magazine" />
   <h2> GlobaLee Magazine </h2>
   <p>Created a magazine and video to showcase a glimpse of the magazine on social media.</p>
 </div>
