--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@
       <p>Created cover and interiors for a 380-page book, featuring chapter breaks and footnotes.</p>
     </div>
     <div class="project">
+<video width="320" height="240" controls>
+  <source src="video_preview.mp4" type="video/mp4">
+  <source src="video_preview.ogv" type="video/ogv">
+  Your browser does not support the video tag.
+</video>
+      
   <img src="https://pub-65ba328524bc4fc1a1ff402dd2e64d63.r2.dev/video_preview.mp4" alt="Social Media Videos: GlobaLee Magazine" />
   <h2> GlobaLee Magazine </h2>
   <p>Created a magazine and video to showcase a glimpse of the magazine on social media.</p>
