--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     </video>
   </div>
       
-  <img src="https://pub-65ba328524bc4fc1a1ff402dd2e64d63.r2.dev/video_preview.mp4" alt="Social Media Videos: GlobaLee Magazine" />
+  <img src="" alt="Social Media Videos: GlobaLee Magazine" />
   <h2> GlobaLee Magazine </h2>
   <p>Created a magazine and video to showcase a glimpse of the magazine on social media.</p>
 </div>
