--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     }
     .video-container video {
       width: 100%;
-      height: 100%;
+      height: auto%;
       object-fit: contain; /* Fit entire video inside without cropping */
       background: black;
     }
