--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     body {
       margin: 0;
       padding: 0;
-      background: black; /* Prevent blank space behind video */
+      background: white; /* Prevent blank space behind video */
     }
     .video-container {
       position: relative;
