--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       width: 100%;
       height: 100vh; /* Full viewport height */
       overflow: hidden;
-      background: black;
+      background: white;
     }
     .video-container video {
       width: 100%;
