--- a/index.html
+++ b/index.html
@@ -95,15 +95,15 @@
     .video-container {
       position: relative;
       width: 100%;
-      height: 100vh; /* Full viewport height */
+      height: auto; /* Full viewport height */
       overflow: hidden;
       background: white;
     }
     .video-container video {
       width: 100%;
-      height: auto%;
+      height: auto;
       object-fit: contain; /* Fit entire video inside without cropping */
-      background: black;
+      background: white;
     }
   </style>
 </head>
