--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     }
     .video-container video {
       width: 100%;
-      height: auto;
+      height: 100%;
       object-fit: contain; /* Fit entire video inside without cropping */
       background: white;
     }
