--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   </style>
 </head>
 <body>
-  <div class="video-container"> <" alt="Social Media Videos: GlobaLee Magazine" />
+  <div class="video-container"> 
     <video autoplay muted loop playsinline poster="fallback-image.jpg">
       <source src="video_preview.mp4" type="video/mp4">
       <source src="video_preview.ogv" type="video/ogg">
