--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
     </div>
     <div class="project">
       <img src="web_preview.jpg" alt="Screenshot of FMP website">
-      <h2>Web Design: FMP Website</h2>
-      <p>Conceptualized clean, modern website layouts tailored for client engagement.</p>
+      <h2>Web Design: ONE8 Website</h2>
+      <p>Conceptualized clean, modern website layouts tailored for youth engagement.</p>
     </div>
     <div class="project">
-      <img src="book_preview.jpg" alt="Marketing Collateral: Coin Box">
+      <img src="book_preview.jpg" alt="Book Design: Positioned for the Gifts">
       <h2>Book Design: <em>Positioned for the Gifts</em></h2>
-      <p>Created cover and interiors for a 380-page book, featuring chapter breaks and footnotes.</p>
+      <p>Developed the cover and interior layout for a 380-page book, integrating chapter breaks and footnotes. Produced a 96-page saddle-stitched companion workbook to support the main text.</p>
     </div>
     <div class="project">
 
