--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <p>Created bank for non-profit, so that children to collect and save coins for donation.</p>
     </div>
     <div class="project">
-      <img src="web_preview.jpg" alt="Screenshot of FMP website">
+      <img src="web_preview.jpg" alt="Mock-ups of ONE8 website">
       <h2>Web Design: ONE8 Website</h2>
       <p>Conceptualized clean, modern website layouts tailored for youth engagement.</p>
     </div>
