--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <div class="project">
       <img src="marketing collateral_preview.jpg" alt="Marketing Collateral: Coin Box">
       <h2>Marketing Collateral: <em>Coin Box</em></h2>
-      <p>Created bank for non-profit, so that children to collect and save coins for donation.</p>
+      <p>Designed cube piggy bank and die cut for coin collection for a charitable organization.</p>
     </div>
     <div class="project">
       <img src="web_preview.jpg" alt="Mock-ups of ONE8 website">
@@ -110,7 +110,7 @@
   </div>
       
   <h2> GlobaLee Magazine </h2>
-  <p>Created a magazine and video to showcase a glimpse of the magazine on social media.</p>
+  <p>Created a 16-page magazine and video to showcase a glimpse of the magazine on social media.</p>
 </div>
   </main>
   <footer>
