--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
 <div class="project">
       <img src="marketing collateral_preview.jpg" alt="Marketing Collateral: Coin Box">
-      <h2>Marketing Collateral: <em>Coin Box</em></h2>
+      <h2>Marketing Collateral: Coin Box</h2>
       <p>Designed cube piggy bank and die cut for coin collection for a charitable organization.</p>
     </div>
     <div class="project">
@@ -108,7 +108,7 @@
     </video>
   </div>
       
-  <h2> GlobaLee Magazine </h2>
+  <h2> Magazine and Social Media: GlobaLee </h2>
   <p>Created a 16-page magazine and video to showcase a glimpse of the magazine on social media.</p>
 </div>
   </main>
